CIV-8310 Bug fix for duplicate draft documents